[project]
name = "equity-traders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.44.1",
    "mcp>=1.13.1",
    "openai-agents>=0.2.10",
    "pandas>=2.3.2",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
]
